fix: Jumping button in hero

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -295,7 +295,6 @@ hr {
 }
 
 .hero-content {
-    padding: 0;
     top: 60%;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -351,10 +350,6 @@ hr {
     text-transform: uppercase;
     letter-spacing: 1.6px;
     transition: all .2s ease;
-}
-
-.btn-highlights:hover {
-    font-size: 110%;
 }
 
 /*--------------- Featured section ---------------*/
